--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
+    <link rel="stylesheet" href="/public/style.css" />
   </head>
   <body>
-    Welcome To Aksara
+    Welcome To
+    <span class="aksara-text">Aksara</span>.
   </body>
 </html>
