chore: new branding

--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ body {
   font-weight: bold;
 }
 
-.aksara-text {
+.node-express-starter-text {
   background: linear-gradient(to right, #ff8a00 0%, #dd4c4f 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
