--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,6 @@
   </head>
   <body>
     Welcome To
-    <span class="aksara-text">Aksara</span>.
+    <span class="node-express-starter-text">node-express-starter</span>.
   </body>
 </html>
